tests/fails/missingmetamethod.t

struct A {
}

terra foo()
	var a : A
	a()
end

foo()
